<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TournamentCustomization">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_card">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/gameSettings"
            android:background="@drawable/gradient_card">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentGame"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_marginTop="50dp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tournamentName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="90dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/forms"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentGameMode"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:id="@+id/tournamentModeText"
                android:layout_marginTop="150dp"/>

            <Spinner
                android:id="@+id/tournamentGameMode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="190dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/forms"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentTeamsCount"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:id="@+id/tournamentTeamsCountText"
                android:layout_marginTop="250dp"/>

            <Spinner
                android:id="@+id/tournamentTeamsCount"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="290dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/forms"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"/>

            <View
                android:id="@+id/underGameFormLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/tournamentTeamsCount"
                android:background="#8B0000"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentFormat"
                android:layout_below="@+id/underGameFormLine"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:id="@+id/tournamentFormatText"
                android:layout_margin="10sp"/>
            <ToggleButton
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/tournamentFormatText"
                android:background="@drawable/tournament_format_button"
                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"
                android:textOn="@string/onceEliminate"
                android:textOff="@string/onceEliminate"
                android:checked="true"
                android:id="@+id/onceEliminationToggleButton"/>
            <ToggleButton
                android:layout_width="220dp"
                android:layout_height="50dp"
                android:layout_below="@id/onceEliminationToggleButton"
                android:background="@drawable/tournament_format_button"
                android:layout_marginStart="10sp"
                android:layout_marginTop="20sp"
                android:textOn="@string/SwissSystem"
                android:textOff="@string/SwissSystem"
                android:checked="false"
                android:id="@+id/swissSystemToggleButton"/>

            <View
                android:id="@+id/underFormatFormLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@id/swissSystemToggleButton"
                android:layout_marginTop="40dp"
                android:background="#8B0000"/>

            <TextView
                android:id="@+id/tournamentInfoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/underFormatFormLine"
                android:layout_marginStart="20sp"
                android:layout_marginTop="20sp"
                android:layout_marginEnd="20sp"
                android:layout_marginBottom="20sp"
                android:text="@string/tournamentDescription"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp" />
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="380sp"
                android:layout_height="150sp"
                android:layout_below="@+id/tournamentInfoText"
                android:background="@drawable/forms"
                android:id="@+id/tournamentDescription"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tournamentRules"
                android:layout_below="@+id/tournamentDescription"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:id="@+id/tournamentRulesText"
                android:layout_margin="20sp"/>

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="380sp"
                android:layout_height="150sp"
                android:background="@drawable/forms"
                android:id="@+id/tournamentRules"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_below="@+id/tournamentRulesText"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck,SpeakableTextPresentCheck"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textAlignment="center"
                android:id="@+id/tournamentRegionText"
                android:layout_below="@id/tournamentRules"
                android:text="Регион"/>
            <Spinner
                android:id="@+id/tournamentRegion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_below="@id/tournamentRegionText"
                android:background="@drawable/forms"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck"/>

            <View
                android:id="@+id/underInfoFormLine"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_below="@id/tournamentRegion"
                android:layout_marginTop="20dp"
                android:background="#8B0000"/>

            <TextView
                android:id="@+id/tournamentDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Дата проведения турнира"
                android:textSize="24dp"
                android:layout_below="@id/underInfoFormLine"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/setTournamentStartDate"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/tournamentDate"
                android:background="@drawable/create_tournament_button"
                android:layout_centerHorizontal="true"
                android:text="Выбрать дату проведения турнира"
                android:textSize="14dp"/>

            <TextView
                android:id="@+id/dateText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Дата не установлена!"
                android:textColor="@color/red"
                android:textSize="20dp"
                android:layout_marginTop="10dp"
                android:layout_below="@id/setTournamentStartDate"
                android:textAlignment="center"/>

            <Button
                android:id="@+id/createTournamentButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_below="@id/dateText"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/create_tournament_button"
                android:text="@string/createTournament"
                android:textColor="@color/black"
                app:backgroundTint="@null"/>

            <View
                android:layout_width="400sp"
                android:layout_height="220sp"
                android:background="@drawable/create_tournament_button"
                android:layout_below="@+id/tournamentInfoText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"
                android:id="@+id/notificationTournamentCreated"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentCreated"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_below="@+id/tournamentInfoText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35sp"
                android:id="@+id/tournamentCreatedText"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentCreationSuccessful"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_below="@+id/tournamentCreatedText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:visibility="invisible"
                android:id="@+id/tournamentCreatedText1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wannaPublish"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_below="@+id/tournamentCreatedText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="55sp"
                android:id="@+id/publishQuestion"
                android:visibility="invisible"/>
            <View
                android:layout_width="125sp"
                android:layout_height="50sp"
                android:background="@drawable/create_organization_button"
                android:layout_below="@+id/publishQuestion"
                android:layout_marginStart="60sp"
                android:id="@+id/publishLaterButton"
                android:layout_marginTop="30sp"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/later"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_below="@+id/publishQuestion"
                android:layout_marginStart="85sp"
                android:layout_marginTop="35sp"
                android:visibility="invisible"
                android:id="@+id/publishLaterButtonText"/>
            <View
                android:layout_width="180sp"
                android:layout_height="50sp"
                android:background="@drawable/create_organization_button"
                android:layout_below="@+id/publishQuestion"
                android:layout_marginEnd="60sp"
                android:layout_alignParentEnd="true"
                android:id="@+id/publishNowButton"
                android:layout_marginTop="30sp"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/publish"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_below="@+id/publishQuestion"
                android:layout_marginEnd="70sp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35sp"
                android:visibility="invisible"
                android:id="@+id/publishNowButtonText"/>

            <View
                android:layout_width="400sp"
                android:layout_height="170sp"
                android:background="@drawable/create_tournament_button"
                android:layout_below="@+id/tournamentInfoText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30sp"
                android:id="@+id/notificationTournamentPublished"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentPublished"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_below="@+id/tournamentInfoText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="35sp"
                android:id="@+id/tournamentPublishedText"
                android:visibility="invisible"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tournamentPublishedSuccessful"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_below="@+id/tournamentCreatedText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15sp"
                android:visibility="invisible"
                android:id="@+id/publishSuccessText"/>
            <View
                android:layout_width="180sp"
                android:layout_height="50sp"
                android:background="@drawable/create_organization_button"
                android:layout_below="@+id/publishSuccessText"
                android:layout_centerHorizontal="true"
                android:id="@+id/goToContentButton"
                android:visibility="invisible"
                android:layout_marginTop="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onMain"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:layout_below="@+id/publishSuccessText"
                android:layout_marginTop="25sp"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:id="@+id/goToContentButtonText"/>
        </RelativeLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>